--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,34 @@
-/vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
+/docker
+/env/app.prod.env
+/env/db.dev.env
+/nginx/default.prod.conf
+/php/Dockerfile.prod
+/docker-compose.prod.yml
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
+*.log
+.DS_Store
+/.fleet
+/.idea
+/.nova
 
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
+/laravel_test/.env
+/laravel_test/.env.backup
+/laravel_test/.env.production
+/laravel_test/.phpactor.json
+/laravel_test/.phpunit.result.cache
+/laravel_test/.phpunit.cache
+/laravel_test/.vscode
+/laravel_test/.zed
+/laravel_test/auth.json
+/laravel_test/node_modules
+/laravel_test/public/build
+/laravel_test/public/hot
+/laravel_test/public/storage
+/laravel_test/storage/*.key
+/laravel_test/storage/pail
+/laravel_test/vendor
 Homestead.json
-/.vagrant
-.phpunit.result.cache
-
-/public/build
-/storage/pail
-.env.backup
-.env.production
-.phpactor.json
-auth.json
+Homestead.yaml
+/laravel_test/Homestead.json
+/laravel_test/Homestead.yaml
+Thumbs.db
